- BsProgressBar: fix label-alignment - BsNotification: improve message body padding - BsSwitch: improve margin - Add text alignment utility classses: 'text-*'

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -156,7 +156,7 @@ $switch-outlined-thumb-size:        1.125rem; // 18px;
 $switch-inset-track-width:          3.25rem;  // 52px;
 $switch-inset-track-height:         2rem;     // 32px;
 $switch-outline-stroke:             0.094rem; // 1.5px;
-$switch-margin:                     .5rem .25rem;
+$switch-margin:                     .25rem .25rem;
 $switch-shadows:                    0 0 6px -1px oklch(0 0 0 / 0.1), 0 1px 1px 1px oklch(0 0 0 / 0.15), 0 1px 3px 0 oklch(0 0 0 / 0.12);
 $switch-disabled-shadows:           0 2px 1px -1px oklch(0 0 0 / 0.2), 0 1px 1px 0 oklch(0 0 0 / 0.14), 0 1px 3px 0 oklch(0 0 0 / 0.12);
 
